<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        tools:context=".ResultadoImcActivity">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-48dp"
            app:cardCornerRadius="48dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:text="@string/text_view_resultado"
                    android:textAppearance="@style/titulo"
                    android:textSize="24sp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_marginTop="32dp"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    app:cardCornerRadius="90dp"
                    app:cardElevation="32dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_view_resultado_imc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_view_20_5"
                            android:textAppearance="@style/titulo"
                            android:textColor="@android:color/white"
                            android:textSize="48sp" />

                        <TextView
                            android:id="@+id/text_view_status_imc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_view_peso_ideal"
                            android:textAppearance="@style/titulo"
                            android:textColor="@android:color/holo_blue_bright"
                            android:textSize="18sp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/text_view_dica_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:gravity="center"
                    android:text="@string/text_view_aqui"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_view_titulo_dica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_dica"
            android:drawablePadding="12dp"
            android:text="@string/text_view_titulo"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_dica"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/text_view_movimente_se"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white" />

    </LinearLayout>

</ScrollView>