<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_resultado_ncd"
    android:fillViewport="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ResultadoImcActivity"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="48dp"
            android:layout_marginTop="-48dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_resultado"
                    android:layout_marginTop="48dp"
                    android:textAppearance="@style/titulo"
                    android:textSize="24sp"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    app:cardCornerRadius="90dp"
                    android:layout_marginTop="32dp"
                    app:cardElevation="32dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/text_view_resultado_ncd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="20,5"
                            android:textAppearance="@style/titulo"
                            android:textSize="48sp"
                            android:textColor="@android:color/white"/>


                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_necessidade_calorica_diaria_ncd"
                    android:layout_marginTop="32dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:gravity="center"/>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_view_dica"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/text_view_movimente_se"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white"
            android:layout_margin="16dp"/>

    </LinearLayout>
</ScrollView>